# real-estate-analysis

./: .gitignore  README.md  common.py  environment.yaml  environment.yml  home.py  main.py  pyproject.toml  requirements.txt
background_work/: __init__.py  entry.py  start.py  test.py
pages/: 1_examples.py  2_experiments.py  sample_page.py
recipe/: common.py  test.py
