[tool.poetry]
name = "real-estate-analysis"
version = "0.1.0"
description = "Analyzing Korean real-estate dynamically with public open data"
authors = ["Hyunsung Ro ", "DongHyun Kim <temeddix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.15"
streamlit = "1.25.0"
pydeck = "0.8.0"
watchdog = "3.0.0"
pandas = "2.0.2"
numpy = "1.25.0"
geopandas = "0.13.2"
paramiko = "^3.3.1"
fsspec = "^2023.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
