[tool.poetry]
name = "real_estate_analysis"
version = "0.1.0"
description = "Analyzing Korean real-estate dynamically with public open data"
authors = ["Hyunsung Ro ", "DongHyun Kim <temeddix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,!=3.9.7"
streamlit = "1.28.2"
pydeck = "0.8.0"
watchdog = "3.0.0"
pandas = "2.1.3"
numpy = "1.26.2"
geopandas = "0.14.1"
paramiko = "^3.3.1"
fsspec = "2023.10.0"

[tool.poetry.dev-dependencies]
ruff = "*"

[tool.ruff]
extend-select = ["N", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
