[project]
name = "real_estate_analysis"
version = "0.1.0"
description = "Analyzing Korean real-estate dynamically with public open data"
authors = [
    { name = "Hyunsung Ro" },
    { name = "DongHyun Kim", email = "temeddix@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "streamlit==1.28.2",
    "pydeck==0.8.0",
    "watchdog==3.0.0",
    "pandas==2.2.3",
    "numpy==1.26.2",
    "geopandas==0.14.1",
    "paramiko>=3.3.1",
    "fsspec==2023.10.0",
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.ruff]
extend-select = ["N", "I"]

[tool.pyright]
typeCheckingMode = "strict"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
